Make sure both the placeholder and control label do not overflow

--- a/packages/web-components/src/components/cbp-dropdown/cbp-dropdown.scss
+++ b/packages/web-components/src/components/cbp-dropdown/cbp-dropdown.scss
@@ -46,13 +46,11 @@ cbp-dropdown {
   button {
     appearance: none;
     white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
 
-    .cbp-dropdown-label {
-      //white-space: nowrap;
-      //text-overflow: ellipsis;
-      //overflow: hidden;
+    .cbp-dropdown-label,
+    .cbp-dropdown-placeholder {
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     .cbp-dropdown-placeholder {
